Acers to E-Learn CS.

--- a/contactus.html
+++ b/contactus.html
@@ -29,7 +29,7 @@
         <nav>
             <div class="navbar">
                 <div class="logo">
-                    <a href="#" id="logopic"><img src="logopic.png" alt="logo"></a>
+                    <a href="#" id="logopic"><img src="download.png" alt="logo"></a>
                 </div>
                 <div class="nav-elements">
                     <ul id="sidemenu">
@@ -65,7 +65,7 @@
                     <div class="p">
                         <i class="fa-solid fa-code"></i>
                         <h4>Made with <i class="fa-solid fa-heart" id="heart"></i> by</h4>
-                        <p>Sahil, Aadil, Ismail, Armaan</p>
+                        <p>Mohd Sahil</p>
                     </div>
                 </div>
 
@@ -118,12 +118,9 @@
     <section class="footer" style="top: 0;">
         <div class="footer-wrapper">
             <div class="section1">
-                <a href="#"><img src="logopic.png" alt="logo"></a>
-                <p> The development of ACERS has been a dynamic journey filled with innovation and dedication. As we
-                    reflect on the year-long practical project, we take pride in the seamless integration of
-                    cutting-edge technologies and user-centric design</p>
-                <h4>special thanks</h4>
-                <h3>mr. shailendra purohit (HOD BCA Faculty)</h3>
+                <a href="#"><img src="download.png" alt="logo"></a>
+                <h5>Developed by</h5>
+                <h2>Mohd Sahil</h2> 
             </div>
             <div class="section2">
                 <div>
