--- a/index.html
+++ b/index.html
@@ -30,17 +30,16 @@
             <nav>
                 <div class="navbar">
                     <div class="logo">
-                        <a href="index.html" id="logopic"><img src="logopic.png" alt="logo"></a>
+                        <a href="index.html" id="logopic"><img src="download.png" alt="logo"></a>
                     </div>
                     <div class="nav-elements">
                         <ul id="sidemenu">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="#categories">categories</a></li>
                             <li><a href="#about-us">about-us</a></li>
-                            <!-- <li><a href="notes.html">notes</a></li> -->
-                            <!-- <li><a href="courses.html">Courses</a></li> -->
                             <li><a href="career.html#mca">MCA</a></li>
-                            <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
+                            <button class="contact-us"
+                                onclick="window.location.href='contactus.html';">contact-us</button>
                             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                         </ul>
                         <i class="fa-solid fa-bars" onclick="openmenu()" id="hb"></i>
@@ -51,10 +50,10 @@
                 <div class="home-headings">
                     <h1 class="intro">all you need to know about</h1>
                     <!-- <h1 class="bca">b<p class="ff">achelor of</p> c<p class="ff">omputer</p> a<p class="ff">pplication</p></h1> -->
-                    <h1 class="bca">b.c.a.</h1>
-                    <p class="fullform">(Bachelor of Computer Application)</p>
+                    <h1 class="bca">c.s.</h1>
+                    <p class="fullform">(Computer Science)</p>
                     <p class="description">From course insights to career tips, we've got everything you need for a
-                        successful BCA journey. Navigate through our user-friendly platform and empower your path to
+                        successful BCA/MCA journey. Navigate through our user-friendly platform and empower your path to
                         excellence in computer applications!</p>
                 </div>
                 <div class="mainheader"><img src="aiimages/img1111.png" alt=""></div>
@@ -132,26 +131,29 @@
                 </div>
                 <div class="aboutus-content">
                     <h2>about-us</h2>
-                    <h1><span>Welcome To Acers - </span>Your Gateway To Knowledge!</h1>
-                    <p>On ACERS we share our BCA experiences with you to make your BCA journey better.</p>
+                    <h1><span>Welcome To E-Learn CS - </span>Your Gateway To Knowledge!</h1>
+                    <p>On this paltform we share Notes, PYQ and many more things with you to make your BCA/MCA journey better.</p>
                     <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="50" cy="50" r="42.5" stroke="#FFAC41" stroke-width="15" />
                     </svg>
-                    <p>On ACERS you can find....</p>
+                    <p>On E-Learn CS you can find....</p>
                     <ul>
-                        <li><i class='bx bx-check-square'></i>Notes (cover all BCA subject)</li>
+                        <li><i class='bx bx-check-square'></i>Notes (cover all CS subjects)</li>
                         <li><i class='bx bx-check-square'></i>video lectures (to improve skills)</li>
                         <li><i class='bx bx-check-square'></i>PYQ-papers</li>
-                        <li><i class='bx bx-check-square'></i>Career in BCA (what to do after BCA)</li>
+                        <li><i class='bx bx-check-square'></i>Careers (what to do after BCA/MCA)</li>
                     </ul>
                 </div>
             </div>
         </section>
     </section>
 
-    <!-- ============= team details =========== -->
-    <section class="team" id="categories">
-        <h3 class="team-heading">meet the team</h3>
+
+
+    <!-- ============= My details =========== -->
+
+    <!-- <section class="team" id="categories">
+        <h3 class="team-heading">Meet the Developer</h3>
         <div class="team-cards">
 
             <div class="team-card card3">
@@ -172,101 +174,22 @@
                     </ul>
                     <div class="team-buttons">
                         <button id="sahil">portfolio</button>
-                        <!-- <button>resume</button> -->
                     </div>
 
                 </div>
             </div>
-
-            <!-- <div class="team-card card1">
-                <div class="team-img" id="pic3"></div>
-                <div class="team-content">
-                    <h1>Ismail</h1>
-                    <h3>batch: 2021-24</h3>
-                    <ul id="socialid">
-                        <a href="https://www.instagram.com/mr_muhammadismail_07dz?igsh=MzRlODBiNWFlZA==">
-                            <li><i class='bx bxl-instagram'></i></li>
-                        </a>
-                        <a href="https://github.com/ismailmdattari">
-                            <li><i class='bx bxl-github'></i></li>
-                        </a>
-                        <a
-                            href="https://www.linkedin.com/in/muhammad-ismail-307914290?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
-                            <li><i class='bx bxl-linkedin'></i></li>
-                        </a>
-                    </ul>
-                    <div class="team-buttons">
-                        <button id="openButton">portfolio</button>
-                    </div>
-                </div>
-            </div> -->
-
-
-            <div class="team-card card2">
-                <div class="team-img" id="pic4"></div>
-                <div class="team-content">
-                    <h1>Aadil</h1>
-                    <h3>batch: 2021-24</h3>
-                    <ul id="socialid">
-                        <a href="https://www.instagram.com/siddiquiaaqalb?igsh=MzRlODBiNWFlZA==">
-                            <li><i class='bx bxl-instagram'></i></li>
-                        </a>
-                        <a href="https://github.com/mdaadilsiddiqui">
-                            <li><i class='bx bxl-github'></i></li>
-                        </a>
-                        <a href="3">
-                            <li><i class='bx bxl-linkedin'></i></li>
-                        </a>
-                    </ul>
-                    <div class="team-buttons ">
-                        <button id="openButton">portfolio</button>
-                        <!-- <button>resume</button> -->
-                    </div>
-
-                </div>
-            </div>
-
-            <!-- <div class="team-card card4">
-                <div class="team-img" id="pic2"></div>
-                <div class="team-content">
-                    <h1>Arman</h1>
-                    <h3>batch: 2021-24</h3>
-                    <ul id="socialid">
-                        <a href="https://www.instagram.com/armaan_19?igsh=MzRlODBiNWFlZA==">
-                            <li><i class='bx bxl-instagram'></i></li>
-                        </a>
-                        <a href="">
-                            <li><i class='bx bxl-github'></i></li>
-                        </a>
-                        <a
-                            href="https://www.linkedin.com/in/mohammad-arman-50531724a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
-                            <li><i class='bx bxl-linkedin'></i></li>
-                        </a>
-                    </ul>
-                    <div class="team-buttons">
-                        <button id="openButton">portfolio</button>
-                    </div>
-                </div>
-            </div> -->
-
         </div>
-    </section>
-    </section>
+    </section> -->
+
+
 
     <!--========== footer starts here  ==========-->
     <section class="footer">
         <div class="footer-wrapper">
             <div class="section1">
-                <a href="index.html"><img src="logopic.png" alt="logo"></a>
-                <p> The development of ACERS has been a dynamic journey filled with innovation and dedication. As we
-                    reflect on the year-long practical project, we take pride in the seamless integration of
-                    cutting-edge technologies and user-centric design</p>
-                <!-- <p>
-                    We extend our gratitude to everyone who contributed to this project, from the brainstorming sessions
-                    to the final implementation
-                </p> -->
-                <h4>special thanks</h4>
-                <h3>mr. shailendra purohit (HOD BCA Faculty)</h3>
+                <a href="index.html"><img src="download.png" alt="logo"></a>
+                <h5>Developed by</h5>
+                <h2>Mohd Sahil</h2>
             </div>
             <div class="section2">
                 <div>
@@ -300,7 +223,6 @@
                     <li>CSS</li>
                     <li>javascript</li>
                     <li>bootstrap</li>
-                    <li>react-js</li>
                 </ul>
 
             </div>
