--- a/notes.html
+++ b/notes.html
@@ -27,7 +27,7 @@
   <nav>
     <div class="navbar">
       <div class="logo">
-        <a href="index.html" id="logopic"><img src="logopic.png" alt="logo"></a>
+        <a href="index.html" id="logopic"><img src="download.png" alt="logo"></a>
       </div>
       <div class="nav-elements">
         <ul id="sidemenu">
@@ -50,10 +50,9 @@
     <div class="head-er">
       <div class="header-content">
         <h1>All subject-wise <span class="yellowish">notes</span></h1>
-        <p>Welcome to <b style="color: #1ab79d;">ACERS</b>, your one-stop destination for comprehensive BCA (Bachelor of
-          Computer Applications)
+        <p>Welcome to <b style="color: #1ab79d;">E-Learn CS</b>, your one-stop destination for
           hand-written notes.Elevate your learning experience with our organized repository, designed to
-          aid BCA students in mastering their coursework. Access high-quality notes at your fingertips, covering a range
+          aid BCA/MCA students in mastering their coursework. Access high-quality notes at your fingertips, covering a range
           of subjects to empower your academic journey.</p>
       </div>
       <div class="header-image">
@@ -70,7 +69,7 @@
               <div class="card_image"><img src="pyq/csa.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">Computer system architecture</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1Cuk58i6Pqg4AktZksX1AbNoBTQhEl3PL?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -81,28 +80,18 @@
               <div class="card_image"><img src="pyq/dbms.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">DataBase management system</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1g_Go94tKLYGXSo1_w8mOi_HwT4Q1znm_?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
-          <!-- <li class="cards_item">
-            <div class="card">
-              <div class="card_image"><img src="pyq/maths.jpg"></div>
-              <div class="card_content">
-                <h2 class="card_title">Mathematics</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
-              </div>
-            </div>
-          </li> -->
           <li class="cards_item">
             <div class="card">
               <div class="card_image"><img src="pyq/c.png"></div>
               <div class="card_content">
                 <h2 class="card_title">Programming with c</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1HVW6YOyh1sVjicQzSRgt9I1Q1RxdBzWI?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -113,28 +102,18 @@
               <div class="card_image"><img src="pyq/cpp.png"></div>
               <div class="card_content">
                 <h2 class="card_title">Programming with c++</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1zDesoqZSRPqMowssutDAcm_ezJOEBvPf?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
-          <!-- <li class="cards_item">
-            <div class="card">
-              <div class="card_image"><img src="pyq/wt.jpg"></div>
-              <div class="card_content">
-                <h2 class="card_title">web technology</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
-              </div>
-            </div>
-          </li> -->
           <li class="cards_item">
             <div class="card">
               <div class="card_image"><img src="pyq/mm.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">multimedia</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1FpZEITQ4HARt5hJjpdSVUIxYui8suG2v?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -145,7 +124,7 @@
               <div class="card_image"><img src="pyq/java.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">java</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1DFESGXuJfj12weAOe5RbcqNuCOI2wnW-?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -156,7 +135,7 @@
               <div class="card_image"><img src="pyq/dsa.png"></div>
               <div class="card_content">
                 <h2 class="card_title">data structure and algorithm</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1MVhg4rABxUKprup-WE1uq5F98IB_Hbjp?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -167,7 +146,7 @@
               <div class="card_image"><img src="pyq/de.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">digital electronics</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1-q9BeETHAwFj17NbQAJgyPULxwk1EmPZ?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -178,7 +157,7 @@
               <div class="card_image"><img src="pyq/it.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">internet technology</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1memLq2rvp2wl8JhYjNBJQ59ek6FG97B5?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -189,7 +168,7 @@
               <div class="card_image"><img src="pyq/cn.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">computer network</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1icuMOF_Kk_jVZimUVAEPAywOJs2Octk6?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -200,7 +179,7 @@
               <div class="card_image"><img src="pyq/cs.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">communication skills</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1Jfwr_1aL1FRd2veVYSeGksQqLjOIoHEY?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -211,7 +190,7 @@
               <div class="card_image"><img src="pyq/vb.png"></div>
               <div class="card_content">
                 <h2 class="card_title">visual basic (vb.net)</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1nRG9c581r2bu66R9u3KErzEULDJxQEHt?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -222,7 +201,7 @@
               <div class="card_image"><img src="pyq/os.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">operating system</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1pWu_J6Q68qySbgefE705-TYGL37tEC8l?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -233,7 +212,7 @@
               <div class="card_image"><img src="pyq/foc.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">fundamental of computer</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1rUiiMLUu051843TSkW9E195seP-u4Okr?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -244,7 +223,7 @@
               <div class="card_image"><img src="pyq/sad.png"></div>
               <div class="card_content">
                 <h2 class="card_title">system analysis and design</h2>
-                <p class="card_text">previous year question from (2016-2023)</p>
+                <p class="card_text">Click Button To Get Google Drive Link</p>
                 <a href="https://drive.google.com/drive/folders/1qsDP1blYm7Jgu4EV-uv7CAiOe9mmkB3z?usp=sharing"
                   style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
@@ -264,16 +243,9 @@
   <section class="footer" style="top: 0;">
     <div class="footer-wrapper">
       <div class="section1">
-        <a href="index.html"><img src="logopic.png" alt="logo"></a>
-        <p> The development of ACERS has been a dynamic journey filled with innovation and dedication. As we
-          reflect on the year-long practical project, we take pride in the seamless integration of
-          cutting-edge technologies and user-centric design</p>
-        <!-- <p>
-          We extend our gratitude to everyone who contributed to this project, from the brainstorming sessions
-          to the final implementation
-        </p> -->
-        <h4>special thanks</h4>
-        <h3>mr. shailendra purohit (HOD BCA Faculty)</h3>
+        <a href="index.html"><img src="download.png" alt="logo"></a>
+        <h5>Developed by</h5>
+                <h2>Mohd Sahil</h2>
       </div>
       <div class="section2">
         <div>
