--- a/pyq.html
+++ b/pyq.html
@@ -17,8 +17,8 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <!-- ======== fontawesome ====== -->
   <script src="https://kit.fontawesome.com/484d1ff7e0.js" crossorigin="anonymous"></script>
-    <!-- ======== web icon ====== -->
-    <link rel="website icon" href="webicon.png" type="png">
+  <!-- ======== web icon ====== -->
+  <link rel="website icon" href="webicon.png" type="png">
   <title>ACERS</title>
 </head>
 
@@ -29,7 +29,7 @@
     <nav>
       <div class="navbar">
         <div class="logo">
-          <a href="#" id="logopic"><img src="logopic.png" alt="logo"></a>
+          <a href="#" id="logopic"><img src="download.png" alt="logo"></a>
         </div>
         <div class="nav-elements">
           <ul id="sidemenu">
@@ -53,18 +53,20 @@
     <div class="head-er">
       <div class="header-content">
         <h1>Previous Year <span class="yellowish">questions Papers</span></h1>
-        <p>Boost your BCA exam preparation with precision! Access our curated collection of previous year question
+        <p>Boost your BCA/MCA exam preparation with precision! Access our curated collection of previous year question
           papers for a targeted study approach. Identify key patterns, refine your skills, and enhance confidence for
-          exam success. Download your essential exam companions now and excel in your BCA journey!</p>
+          exam success. Download your essential exam companions now and excel in your BCA/MCA journey!</p>
       </div>
       <div class="header-image">
         <img src="aiimages/notes33.png" alt="pyq">
       </div>
     </div>
 
+
     <div class="all-pdf">
       <div class="main">
         <h1 id="pyq-heading">all subject-wise previous year <span class="yellowish">questions Papers</span></h1>
+        <h1 id="pyq-heading">MBM University <span class="yellowish"> (MCA)</span></h1>
         <ul class="cards">
           <li class="cards_item">
             <div class="card">
@@ -72,7 +74,8 @@
               <div class="card_content">
                 <h2 class="card_title">web technology</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="old papers/Web Technologies.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/Web Technologies.pdf" download style="text-decoration: none;"><button
+                    class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -82,7 +85,42 @@
               <div class="card_content">
                 <h2 class="card_title">multimedia</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="old papers/Multimedia.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/Multimedia.pdf" download style="text-decoration: none;"><button
+                    class="btn card_btn">Get PDF File</button></a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+
+
+
+    <div class="all-pdf">
+      <div class="main">
+        <h1 id="pyq-heading">all subject-wise previous year <span class="yellowish">questions Papers</span></h1>
+        <h1 id="pyq-heading">JNVU <span class="yellowish"> (BCA)</span></h1>
+        <ul class="cards">
+          <li class="cards_item">
+            <div class="card">
+              <div class="card_image"><img src="pyq/wt.jpg"></div>
+              <div class="card_content">
+                <h2 class="card_title">web technology</h2>
+                <p class="card_text">previous year question from (2017-2022 )</p>
+                <a href="old papers/Web Technologies.pdf" download style="text-decoration: none;"><button
+                    class="btn card_btn">Get PDF File</button></a>
+              </div>
+            </div>
+          </li>
+          <li class="cards_item">
+            <div class="card">
+              <div class="card_image"><img src="pyq/mm.jpg"></div>
+              <div class="card_content">
+                <h2 class="card_title">multimedia</h2>
+                <p class="card_text">previous year question from (2017-2022 )</p>
+                <a href="old papers/Multimedia.pdf" download style="text-decoration: none;"><button
+                    class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -92,7 +130,8 @@
               <div class="card_content">
                 <h2 class="card_title">java</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="old papers/Java.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/Java.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get
+                    PDF File</button></a>
               </div>
             </div>
           </li>
@@ -102,7 +141,8 @@
               <div class="card_content">
                 <h2 class="card_title">system analysis and design</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="old papers/SAD.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/SAD.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get
+                    PDF File</button></a>
               </div>
             </div>
           </li>
@@ -112,7 +152,8 @@
               <div class="card_content">
                 <h2 class="card_title">computer network</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="old papers/Computer Network.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/Computer Network.pdf" download style="text-decoration: none;"><button
+                    class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -122,7 +163,8 @@
               <div class="card_content">
                 <h2 class="card_title">communication skills</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="old papers/Communication Skills.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/Communication Skills.pdf" download style="text-decoration: none;"><button
+                    class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -132,7 +174,8 @@
               <div class="card_content">
                 <h2 class="card_title">Computer system architecture</h2>
                 <p class="card_text">previous year question from (2016-2022 )</p>
-                <a href="https://drive.google.com/drive/folders/13WXN0OZBcUnF-FUXTd-J18hLPA7WWaSq?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/13WXN0OZBcUnF-FUXTd-J18hLPA7WWaSq?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -142,7 +185,8 @@
               <div class="card_content">
                 <h2 class="card_title">DataBase management system</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1i-zx7p7szi18Jpks8JAptWOrPER0NozF?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1i-zx7p7szi18Jpks8JAptWOrPER0NozF?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -152,7 +196,8 @@
               <div class="card_content">
                 <h2 class="card_title">Mathematics</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1Cs3OD4p_g5pT9uT6uZsOJQnTX59Ds6bA?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1Cs3OD4p_g5pT9uT6uZsOJQnTX59Ds6bA?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -162,7 +207,8 @@
               <div class="card_content">
                 <h2 class="card_title">Programming with c</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/12cF-nmdMCA4ZKNKFn9pFRk6szjrC8_4Z?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/12cF-nmdMCA4ZKNKFn9pFRk6szjrC8_4Z?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -172,7 +218,8 @@
               <div class="card_content">
                 <h2 class="card_title">Programming with c++</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1A-wsqDctJbu5lefjY413MQRDnmovaoQF?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1A-wsqDctJbu5lefjY413MQRDnmovaoQF?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -182,7 +229,8 @@
               <div class="card_content">
                 <h2 class="card_title">data structure and algorithm</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1cSfqhBBklc5ezh9N3obfH33Rd57YaYnZ?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1cSfqhBBklc5ezh9N3obfH33Rd57YaYnZ?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -192,7 +240,8 @@
               <div class="card_content">
                 <h2 class="card_title">digital electronics</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1B6BgAFHgEAYLrhSz38xzcMNJIKgHisIS?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1B6BgAFHgEAYLrhSz38xzcMNJIKgHisIS?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -202,7 +251,8 @@
               <div class="card_content">
                 <h2 class="card_title">internet technology</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1Ntv_JgER_zjSPvT1BvanzjZfENNS02pr?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1Ntv_JgER_zjSPvT1BvanzjZfENNS02pr?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -212,7 +262,8 @@
               <div class="card_content">
                 <h2 class="card_title">visual basic (vb.net)</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1qvbOXPp37G30qO_FRSx2b7hEydQec92C?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1qvbOXPp37G30qO_FRSx2b7hEydQec92C?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -222,7 +273,8 @@
               <div class="card_content">
                 <h2 class="card_title">operating system</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1YRWTEo3rV0CENcFQcPuIsg0ujcLkSuQz?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1YRWTEo3rV0CENcFQcPuIsg0ujcLkSuQz?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -232,7 +284,8 @@
               <div class="card_content">
                 <h2 class="card_title">fundamental of computer</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1YRWTEo3rV0CENcFQcPuIsg0ujcLkSuQz?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1YRWTEo3rV0CENcFQcPuIsg0ujcLkSuQz?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -242,7 +295,8 @@
               <div class="card_content">
                 <h2 class="card_title">Environment Studies</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1afqKKdn8hRZy3obIksu_K0U-8w8CNVEB?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1afqKKdn8hRZy3obIksu_K0U-8w8CNVEB?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -258,16 +312,9 @@
   <section class="footer" style="top: 0;">
     <div class="footer-wrapper">
       <div class="section1">
-        <a href="#"><img src="logopic.png" alt="logo"></a>
-        <p> The development of ACERS has been a dynamic journey filled with innovation and dedication. As we
-          reflect on the year-long practical project, we take pride in the seamless integration of
-          cutting-edge technologies and user-centric design</p>
-        <!-- <p>
-          We extend our gratitude to everyone who contributed to this project, from the brainstorming sessions
-          to the final implementation
-        </p> -->
-        <h4>special thanks</h4>
-        <h3>mr. shailendra purohit (HOD BCA Faculty)</h3>
+        <a href="#"><img src="download.png" alt="logo"></a>
+        <h5>Developed by</h5>
+        <h2>Mohd Sahil</h2>
       </div>
       <div class="section2">
         <div>
