--- a/courses.html
+++ b/courses.html
@@ -26,7 +26,7 @@
      <nav>
         <div class="navbar">
             <div class="logo">
-                <a href="#" id="logopic"><img src="logopic.png" alt="logo"></a>
+                <a href="#" id="logopic"><img src="download.png" alt="logo"></a>
             </div>
             <div class="nav-elements">
                 <ul id="sidemenu">
@@ -436,16 +436,9 @@
      <section class="footer" style="top: 0;">
         <div class="footer-wrapper">
             <div class="section1">
-                <a href="#"><img src="logopic.png" alt="logo"></a>
-                <p> The development of ACERS has been a dynamic journey filled with innovation and dedication. As we
-                    reflect on the year-long practical project, we take pride in the seamless integration of
-                    cutting-edge technologies and user-centric design</p>
-                <!-- <p>
-          We extend our gratitude to everyone who contributed to this project, from the brainstorming sessions
-          to the final implementation
-        </p> -->
-                <h4>special thanks</h4>
-                <h3>mr. shailendra purohit (HOD BCA Faculty)</h3>
+                <a href="#"><img src="download.png" alt="logo"></a>
+                <h5>Developed by</h5>
+                <h2>Mohd Sahil</h2>
             </div>
             <div class="section2">
                 <div>
@@ -456,8 +449,6 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#categories">categories</a></li>
                         <li><a href="index.html#about-us">about-us</a></li>
-                        <!-- <li><a href="notes.html">notes</a></li> -->
-                        <!-- <li><a href="courses.html">Courses</a></li> -->
                         <li><a href="career.html#mca">MCA</a></li>
                         <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
                     </ul>
