--- a/contactus.html
+++ b/contactus.html
@@ -19,7 +19,7 @@
     <script src="https://kit.fontawesome.com/484d1ff7e0.js" crossorigin="anonymous"></script>
     <!-- ======== web icon ====== -->
     <link rel="website icon" href="webicon.png" type="png">
-    <title>ACERS</title>
+    <title>E-Learn CS</title>
 </head>
 
 <body>
